@@ -20,20 +20,18 @@ package org.mabb.fontverter;
 import org.apache.commons.io.FileUtils;
 import org.mabb.fontverter.converter.FontConverter;
 import org.reflections.Reflections;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import java.io.File;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Modifier;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 
 public class FontVerter {
-    private static Logger log = LoggerFactory.getLogger(FontVerter.class);
-    private static List<Class> adapters;
+
+	private static List<Class<? extends FVFont>> adapters;
     private static final Object adapterLock = new Object();
 
     public enum FontFormat {
@@ -128,8 +126,8 @@ public class FontVerter {
         }
     }
 
-    private static FVFont parseFont(byte[] fontData, Class<? extends FVFont> adapterOn) throws InstantiationException, IllegalAccessException, IOException {
-        FVFont adapter = adapterOn.newInstance();
+    private static FVFont parseFont(byte[] fontData, Class<? extends FVFont> adapterOn) throws InstantiationException, IllegalAccessException, IOException, IllegalArgumentException, InvocationTargetException, NoSuchMethodException, SecurityException {
+        FVFont adapter = adapterOn.getDeclaredConstructor().newInstance();
         if (adapter.detectFormat(fontData)) {
             adapter.read(fontData);
             return adapter;
@@ -143,14 +141,15 @@ public class FontVerter {
             if (adapters == null) {
                 Reflections reflections = new Reflections("org.mabb.fontverter");
                 Set<Class<? extends FVFont>> adapterClasses = reflections.getSubTypesOf(FVFont.class);
-                Class[] adapterArr = adapterClasses.toArray(new Class[adapterClasses.size()]);
-                adapters = Arrays.asList(adapterArr);
+                adapters = new ArrayList<>(adapterClasses);
 
                 // CFF always last to try
-                Class cffAdapter = null;
-                for (Class adapterOn : adapters) {
-                    if (adapterOn.getSimpleName().contains("CffFont"))
+                Class<? extends FVFont> cffAdapter = null;
+                for (Class<? extends FVFont> adapterOn : adapters) {
+                    if (adapterOn.getSimpleName().contains("CffFont")) {
                         cffAdapter = adapterOn;
+                        break;
+                    }
                 }
 
                 int cffIndex = adapters.indexOf(cffAdapter);
@@ -162,9 +161,9 @@ public class FontVerter {
         }
     }
 
-    private static List<Class> removeAbstractClasses(List<Class> classes) {
-        List<Class> filtered = new ArrayList<Class>();
-        for (Class adapterOn : classes) {
+    private static List<Class<? extends FVFont>> removeAbstractClasses(List<Class<? extends FVFont>> classes) {
+        List<Class<? extends FVFont>> filtered = new ArrayList<>();
+        for (Class<? extends FVFont> adapterOn : classes) {
             if (!Modifier.isAbstract(adapterOn.getModifiers()))
                 filtered.add(adapterOn);
         }
